--- a/index.html
+++ b/index.html
@@ -4,10 +4,85 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cocktail Recipe App</title>
-  
+
 </head>
 <body>
+  <header>
+    <div class="wrapper">
+      <h1>LOGO</h1>
+      <nav>
+        <ul class="navigation-list">
+          <li>About</li>
+          <li>Cocktail Recipes</li>
+          <li>Favorites</li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
+  <main>
+    <section class="about">
+      <div class="about-content">
+        <h2>
+          About Us
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur iure nulla fugiat omnis suscipit recusandae rem reprehenderit vero dolorem placeat.</p>
+        </h2>
+      </div>
+    </section>
+    <!-- About Section ENDS -->
+
+    <section class="main">
+      <div class="wrapper">
+        <div class="main-container">
+          <div class="main-content">
+            <h2>Cocktail Recipes</h2>
+            <p>Instruction how to use the search</p>
+            <div class="main-content-img">
+              <!-- Add descipriton in the alt -->
+              <img src="https://source.unsplash.com/400x500" alt="">
+            </div>
+            <!-- Main Content Div ENDS -->
+          </div>
+          <!-- Main Container ENDS  -->
+        </div>
+
+        <div class="main-search">
+          <form action="submit">
+            <label for="" class="sr-only">Ingredient</label>
+            <input type="text" placeholder="Enter an ingredient">
+            <button type="submit" class="btn">Search</button>
+          </form>
+          <!-- Main Search Div ENDS -->
+        </div>
+
+        <div class="recipe-container">
+          <!-- Dynamically add items here -->
+        </div>
+        <!-- Main Content Wrapper ENDS -->
+      </div>
+    </section>
+
+    <footer>
+      <div class="wrapper">
+        <div class="footer-logo">
+          <h3>LOGO</h3>
+        </div>
+        <div class="footer-nav">
+          <nav>
+            <ul class="navigation-list">
+              <li>About</li>
+              <li>Cocktail Recipes</li>
+              <li>Favorites</li>
+            </ul>
+          </nav>
+        </div>
+        <span>&copy; 2020 Adam Batstone & Karmen Salim<a href="https://junocollege.com/" class="juno-footer-link"> - Created at Juno College</a>
+        </span>
+      <!-- Footer Wrapper ENDS -->
+      </div>
+    </footer>
+
+  </main>
  <!-- Scripts  -->
 <script src='https://code.jquery.com/jquery-3.5.1.min.js'integrity='sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0='crossorigin='anonymous'></script>
 </body>
