Added basic styles for the header section; Created empty sass partial

--- a/index.html
+++ b/index.html
@@ -4,19 +4,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cocktail Recipe App</title>
+  <!-- CSS Styles -->
+  <link rel="stylesheet" href="./styles/styles.css">
 
 </head>
 <body>
   <header>
     <div class="wrapper">
-      <h1>LOGO</h1>
-      <nav>
-        <ul class="navigation-list">
-          <li>About</li>
-          <li>Cocktail Recipes</li>
-          <li>Favorites</li>
-        </ul>
-      </nav>
+      <div class="header-content">
+        <h1>LOGO</h1>
+        <nav class="header-nav">
+          <ul class="navigation-list">
+            <li>About</li>
+            <li>Cocktail Recipes</li>
+            <li>Favorites</li>
+          </ul>
+        </nav>
+      </div>
+      <div class="header-description">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, eos vel nisi aut repudiandae sed saepe temporibus fugit qui ipsa nobis ea repellendus laborum ut sit impedit unde explicabo dolor praesentium.</p>
+      </div>
     </div>
   </header>
 
