--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
   <link rel="stylesheet" href="./styles/styles.css">
 
 </head>
+
 <body>
   <header>
     <div class="wrapper">
@@ -22,19 +24,25 @@
         </nav>
       </div>
       <div class="header-description">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, eos vel nisi aut repudiandae sed saepe temporibus fugit qui ipsa nobis ea repellendus laborum ut sit impedit unde explicabo dolor praesentium.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, eos vel nisi aut repudiandae sed saepe
+          temporibus fugit qui ipsa nobis ea repellendus laborum ut sit impedit unde explicabo dolor praesentium.</p>
       </div>
     </div>
   </header>
 
   <main>
     <section class="about">
-      <div class="about-content">
-        <h2>
-          About Us
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur iure nulla fugiat omnis suscipit recusandae rem reprehenderit vero dolorem placeat.</p>
-        </h2>
+      <div class="wrapper">
+        <div class="about-content">
+          <h2>
+            About Us
+          </h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur iure nulla fugiat omnis suscipit
+            recusandae rem reprehenderit vero dolorem placeat.
+          </p>
+        </div>
       </div>
+
     </section>
     <!-- About Section ENDS -->
 
@@ -83,14 +91,17 @@
             </ul>
           </nav>
         </div>
-        <span>&copy; 2020 Adam Batstone & Karmen Salim<a href="https://junocollege.com/" class="juno-footer-link"> - Created at Juno College</a>
+        <span>&copy; 2020 Adam Batstone & Karmen Salim<a href="https://junocollege.com/" class="juno-footer-link"> -
+            Created at Juno College</a>
         </span>
-      <!-- Footer Wrapper ENDS -->
+        <!-- Footer Wrapper ENDS -->
       </div>
     </footer>
 
   </main>
- <!-- Scripts  -->
-<script src='https://code.jquery.com/jquery-3.5.1.min.js'integrity='sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0='crossorigin='anonymous'></script>
+  <!-- Scripts  -->
+  <script src='https://code.jquery.com/jquery-3.5.1.min.js'
+    integrity='sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=' crossorigin='anonymous'></script>
 </body>
+
 </html>
