styled the footer

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <h1>LOGO</h1>
         <nav class="header-nav">
           <ul class="navigation-list">
-            <li>About</li>
-            <li>Cocktail Recipes</li>
-            <li>Favorites</li>
+            <li><a href="">About</a></li>
+            <li><a href="">Cocktail Recipes</a></li>
+            <li><a href="">Favorites</a></li>
           </ul>
         </nav>
       </div>
@@ -77,8 +77,6 @@
           <!-- Main Container ENDS  -->
         </div>
 
-
-
         <div class="recipe-container">
           <!-- Dynamically add items here -->
         </div>
@@ -88,21 +86,28 @@
 
     <footer>
       <div class="wrapper">
-        <div class="footer-logo">
-          <h3>LOGO</h3>
+        <div class="footer-container">
+          <div class="footer-logo">
+            <h3>LOGO</h3>
+          </div>
+          <div class="footer-nav">
+            <nav>
+              <ul class="footer-navigation-list">
+                <li><a href="">About</a></li>
+                <li><a href="">Cocktail Recipes</a></li>
+                <li><a href="">Favorites</a></li>
+              </ul>
+            </nav>
+          </div>
         </div>
-        <div class="footer-nav">
-          <nav>
-            <ul class="navigation-list">
-              <li>About</li>
-              <li>Cocktail Recipes</li>
-              <li>Favorites</li>
-            </ul>
-          </nav>
+
+        <div class="footer-copyright">
+          <span>&copy; 2020 Adam Batstone & Karmen Salim<a href="https://junocollege.com/" class="juno-footer-link"> |
+              Created at Juno College</a>
+          </span>
         </div>
-        <span>&copy; 2020 Adam Batstone & Karmen Salim<a href="https://junocollege.com/" class="juno-footer-link"> -
-            Created at Juno College</a>
-        </span>
+
+
         <!-- Footer Wrapper ENDS -->
       </div>
     </footer>
