Configured the results from the API call

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
               </ul>
             </div>
 
-            <form action="submit">
+            <form>
               <label for="" class="sr-only">Ingredient</label>
               <input type="text" placeholder="Enter an ingredient">
-              <button type="submit" class="btn">Search</button>
+              <button id="submit-btn" type="submit" class="btn">Search</button>
             </form>
             <!-- Main Search Div ENDS -->
           </div>
