--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
             <form>
               <label for="" class="sr-only">Ingredient</label>
-              <input type="text" placeholder="Enter an ingredient">
+              <input id="input" type="text" placeholder="Enter an ingredient">
               <button id="submit-btn" type="submit" class="btn">Search</button>
             </form>
             <!-- Main Search Div ENDS -->
