Added google fonts & color mixins

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Cocktail Recipe App</title>
   <!-- CSS Styles -->
   <link rel="stylesheet" href="./styles/styles.css">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Ovo&family=Raleway:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">
 
 </head>
 
