--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <header>
     <div class="wrapper">
       <div class="header-content">
-        <h1>LOGO</h1>
+        <h1>Mixologie</h1>
         <nav class="header-nav">
-          <ul class="navigation-list">
+          <ul class="header-nav-list">
             <li><a href="">About</a></li>
             <li><a href="">Cocktail Recipes</a></li>
             <li><a href="">Favorites</a></li>
@@ -56,7 +56,7 @@
         <div class="main-container">
           <div class="main-img">
             <!-- Add descipriton in the alt -->
-            <img src="https://source.unsplash.com/200x300" alt="">
+            <img src="./assets/recipe-section-two.jpg" alt="">
           </div>
           <div class="main-search">
             <div class="main-content">
@@ -90,11 +90,11 @@
       <div class="wrapper">
         <div class="footer-container">
           <div class="footer-logo">
-            <h3>LOGO</h3>
+            <h3>Mixologie</h3>
           </div>
           <div class="footer-nav">
             <nav>
-              <ul class="footer-navigation-list">
+              <ul class="footer-nav-list">
                 <li><a href="">About</a></li>
                 <li><a href="">Cocktail Recipes</a></li>
                 <li><a href="">Favorites</a></li>
