drink recipe now displays on the page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <!-- CSS Styles -->
   <link rel="stylesheet" href="./styles/styles.css">
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Ovo&family=Raleway:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Ovo&family=Raleway:ital,wght@0,300;0,400;1,300;1,400&display=swap"
+    rel="stylesheet">
 
 </head>
 
@@ -79,6 +81,9 @@
           <!-- Main Container ENDS  -->
         </div>
 
+        <div class="modal">
+          <!-- Modal will display drink recipe -->
+        </div>
         <div class="recipe-container">
           <!-- Dynamically add items here -->
         </div>
