--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Ovo&family=Raleway:ital,wght@0,300;0,400;1,300;1,400&display=swap"
     rel="stylesheet">
+  <!-- <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css" /> -->
+
 
 </head>
 
