--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
   <title>Cocktail Recipe App</title>
   <!-- CSS Styles -->
   <link rel="stylesheet" href="./styles/styles.css">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
   <!-- Google Fonts -->
   <link
     href="https://fonts.googleapis.com/css2?family=Ovo&family=Raleway:ital,wght@0,300;0,400;1,300;1,400&display=swap"
     rel="stylesheet">
-  <!-- <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css" /> -->
+
 
 
 </head>
@@ -20,18 +21,17 @@
   <header>
     <div class="wrapper">
       <div class="header-content">
-        <h1>Mixologie</h1>
-        <nav class="header-nav">
+        <h1>Mixologié.</h1>
+        <a class="mobile-nav"><i class="fas fa-bars"></i></a>
+        <nav class="header-nav js-nav">
           <ul class="header-nav-list">
             <li><a href="">About</a></li>
             <li><a href="">Cocktail Recipes</a></li>
-            <li><a href="">Favorites</a></li>
           </ul>
         </nav>
       </div>
       <div class="header-description">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, eos vel nisi aut repudiandae sed saepe
-          temporibus fugit qui ipsa nobis ea repellendus laborum ut sit impedit unde explicabo dolor praesentium.</p>
+        <h2>Everything You Need to Craft The Perfect Cocktail.</h2>
       </div>
     </div>
   </header>
@@ -97,14 +97,13 @@
       <div class="wrapper">
         <div class="footer-container">
           <div class="footer-logo">
-            <h3>Mixologie</h3>
+            <h3>Mixologié.</h3>
           </div>
           <div class="footer-nav">
             <nav>
               <ul class="footer-nav-list">
                 <li><a href="">About</a></li>
                 <li><a href="">Cocktail Recipes</a></li>
-                <li><a href="">Favorites</a></li>
               </ul>
             </nav>
           </div>
@@ -128,6 +127,7 @@
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
     integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
   <script src="scripts/app.js"></script>
+  <script src="scripts/mobile-nav.js"></script>
 </body>
 
 </html>
