--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>Cocktail Recipe App</title>
   <!-- CSS Styles -->
   <link rel="stylesheet" href="./styles/styles.css">
-  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
   <!-- Google Fonts -->
   <link
     href="https://fonts.googleapis.com/css2?family=Ovo&family=Raleway:ital,wght@0,300;0,400;1,300;1,400&display=swap"
@@ -62,7 +63,7 @@
         <div class="main-container">
           <div class="main-img">
             <!-- Add descipriton in the alt -->
-            <img src="./assets/recipe-section-two.jpg" alt="">
+            <img src="./assets/recipe-section-one.jpg" alt="">
           </div>
           <div class="main-search">
             <div class="main-content">
