focus and hover

--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
     <section id="about" class="about">
       <div class="wrapper">
         <div class="about-content">
-          <h2>
-            About Us
-          </h2>
+          <h2>About Us.</h2>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur iure nulla fugiat omnis suscipit
             recusandae rem reprehenderit vero dolorem placeat.
           </p>
@@ -58,7 +56,7 @@
     <section id="main" class="main">
       <div class="wrapper">
         <div class="main-title">
-          <h2>Cocktail Recipes</h2>
+          <h2>Cocktail Recipes.</h2>
         </div>
         <div class="main-container">
           <div class="main-img">
@@ -113,8 +111,8 @@
         </div>
 
         <div class="footer-copyright">
-          <span>&copy; 2020 Adam Batstone & Karmen Salim<a href="https://junocollege.com/" class="juno-footer-link"> |
-              Created at Juno College</a>
+          <span>&copy; 2020 Adam Batstone & Karmen Salim<a href="https://junocollege.com/" class="juno-footer-link">
+              | Created at Juno College</a>
           </span>
         </div>
 
