--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Ovo&family=Raleway:ital,wght@0,300;0,400;1,300;1,400&display=swap"
     rel="stylesheet">
-
-
-
 </head>
 
 <body>
@@ -36,6 +33,7 @@
       <div class="header-description">
         <h2>Everything You Need to Craft The Perfect Cocktail.</h2>
       </div>
+    <!-- Header Wrapper ENDS -->
     </div>
   </header>
 
@@ -48,10 +46,9 @@
             recusandae rem reprehenderit vero dolorem placeat.
           </p>
         </div>
+        <!--  About Content Wrapper ENDS -->
       </div>
-
     </section>
-    <!-- About Section ENDS -->
 
     <section id="main" class="main">
       <div class="wrapper">
@@ -60,8 +57,7 @@
         </div>
         <div class="main-container">
           <div class="main-img">
-            <!-- Add descipriton in the alt -->
-            <img src="./assets/recipe-section-one.jpg" alt="">
+            <img src="./assets/recipe-section-one.jpg" alt="Two glasses filled with rum cocktail, garnished with mint and fresh lime.">
           </div>
           <div class="main-search">
             <div class="main-content">
@@ -85,7 +81,7 @@
         </div>
 
         <div class="modal">
-          <!-- Modal will display drink recipe -->
+          <!-- Dynamically add drink recipe in the modal -->
         </div>
         <div class="recipe-container">
           <!-- Dynamically add items here -->
@@ -109,19 +105,16 @@
             </nav>
           </div>
         </div>
-
         <div class="footer-copyright">
           <span>&copy; 2020 Adam Batstone & Karmen Salim<a href="https://junocollege.com/" class="juno-footer-link">
               | Created at Juno College</a>
           </span>
         </div>
-
-
         <!-- Footer Wrapper ENDS -->
       </div>
     </footer>
-
   </main>
+
   <!-- Scripts  -->
   <script src='https://code.jquery.com/jquery-3.5.1.min.js'
     integrity='sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=' crossorigin='anonymous'></script>
@@ -129,6 +122,6 @@
     integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
   <script src="scripts/app.js"></script>
   <script src="scripts/mobile-nav.js"></script>
-</body>
 
+</body>
 </html>
