--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cocktail Recipe App</title>
+  <title>Mixologié - Cocktail Recipes</title>
+  <link rel="icon" type="image/png" href="./assets/favicon.png" />
   <!-- CSS Styles -->
   <link rel="stylesheet" href="./styles/styles.css">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
