Removed unused assets; Added href for the footer navigation links; Cleaned up unused code in the styles file

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
           <div class="footer-nav">
             <nav>
               <ul class="footer-nav-list">
-                <li><a href="">About</a></li>
-                <li><a href="">Cocktail Recipes</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#main">Cocktail Recipes</a></li>
               </ul>
             </nav>
           </div>
