Added text for the search steps

--- a/index.html
+++ b/index.html
@@ -62,12 +62,13 @@
           </div>
           <div class="main-search">
             <div class="main-content">
-              <p>Find the perfect cocktail:</p>
-              <ul>
-                <li>enter search</li>
-                <li>enter search</li>
-                <li>enter search</li>
-                <li>enter search</li>
+              <p>Find the perfect cocktail based on ingredient you would like to use:</p>
+              <ul class="main-content-steps">
+                <li>Enter a single ingredient (e.g Rum).</li>
+                <li>Get a curated list of recipes.</li>
+                <li>Click on one of the recipe cards to see more details.</li>
+                <li>Craft the perfect cocktail.</li>
+                <li>Enjoy!</li>
               </ul>
             </div>
 
