fixed the styles on the recipe cards

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="header-content">
         <div class="header-mobile-container">
           <h1>Mixologié.</h1>
-          <a class="mobile-nav"><i class="fas fa-bars"></i></a>
+          <a class="mobile-nav" tabindex="0"><i class="fas fa-bars"></i></a>
         </div>
         <nav class="header-nav js-nav">
           <ul class="header-nav-list">
@@ -34,7 +34,7 @@
       <div class="header-description">
         <h2>Everything You Need to Craft The Perfect Cocktail.</h2>
       </div>
-    <!-- Header Wrapper ENDS -->
+      <!-- Header Wrapper ENDS -->
     </div>
   </header>
 
@@ -58,7 +58,8 @@
         </div>
         <div class="main-container">
           <div class="main-img">
-            <img src="./assets/recipe-section-one.jpg" alt="Two glasses filled with rum cocktail, garnished with mint and fresh lime.">
+            <img src="./assets/recipe-section-one.jpg"
+              alt="Two glasses filled with rum cocktail, garnished with mint and fresh lime.">
           </div>
           <div class="main-search">
             <div class="main-content">
@@ -126,4 +127,5 @@
   <script src="scripts/mobile-nav.js"></script>
 
 </body>
+
 </html>
