added search options, can now search by cocktail name

--- a/index.html
+++ b/index.html
@@ -73,6 +73,15 @@
               </ul>
             </div>
 
+            <div class="search-buttons-heading">
+              <h4>Search By</h4>
+              <div class="search-buttons">
+                <button class="name-search">Cocktail Name</button>
+                <button class="ingredient-search">Ingredient</button>
+              </div>
+
+            </div>
+
             <form>
               <label for="" class="sr-only">Ingredient</label>
               <input id="input" type="text" placeholder="Enter an ingredient">
