--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
       <div class="header-content">
         <div class="header-mobile-container">
           <h1>Mixologié.</h1>
-          <a class="mobile-nav" tabindex="0"><i class="fas fa-bars"></i></a>
+          <a class="mobile-nav" tabindex="0"><i class="fas fa-bars" title="Hamburger Menu"></i><span
+              class="sr-only">“Hamburger icon to trigger mobile navigation menu</span></a>
         </div>
         <nav class="header-nav js-nav">
           <ul class="header-nav-list">
@@ -65,7 +66,7 @@
             <div class="main-content">
               <p>Find the perfect cocktail based on ingredient you would like to use:</p>
               <ul class="main-content-steps">
-                <li>Enter a single ingredient (e.g Rum).</li>
+                <li>Select a search option before entering a query in the input field.</li>
                 <li>Get a curated list of recipes.</li>
                 <li>Click on one of the recipe cards to see more details.</li>
                 <li>Craft the perfect cocktail.</li>
@@ -79,12 +80,11 @@
                 <button class="name-search">Cocktail Name</button>
                 <button class="ingredient-search">Ingredient</button>
               </div>
-
             </div>
 
             <form>
-              <label for="" class="sr-only">Ingredient</label>
-              <input id="input" type="text" placeholder="Enter an ingredient">
+              <label for="input" class="sr-only">Ingredient</label>
+              <input id="input" type="text" placeholder="Select a search option">
               <button id="submit-btn" type="submit" class="btn">Search</button>
             </form>
             <!-- Main Search Div ENDS -->
