--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <!-- CSS Styles -->
   <link rel="stylesheet" href="./styles/styles.css">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+     crossorigin="anonymous" />
   <!-- Google Fonts -->
   <link
     href="https://fonts.googleapis.com/css2?family=Ovo&family=Raleway:ital,wght@0,300;0,400;1,300;1,400&display=swap"
@@ -22,8 +23,8 @@
       <div class="header-content">
         <div class="header-mobile-container">
           <h1>Mixologié.</h1>
-          <a class="mobile-nav" tabindex="0"><i class="fas fa-bars" title="Hamburger Menu"></i><span
-              class="sr-only">“Hamburger icon to trigger mobile navigation menu</span></a>
+          <a class="mobile-nav" tabindex="0"><i class="fas fa-bars" title="Hamburger Menu"></i>
+            <span class="sr-only">“Hamburger icon to trigger mobile navigation menu</span></a>
         </div>
         <nav class="header-nav js-nav">
           <ul class="header-nav-list">
@@ -44,7 +45,9 @@
       <div class="wrapper">
         <div class="about-content">
           <h2>About Us.</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur iure nulla fugiat omnis suscipit
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Pariatur iure nulla fugiat omnis suscipit
             recusandae rem reprehenderit vero dolorem placeat.
           </p>
         </div>
@@ -60,7 +63,8 @@
         <div class="main-container">
           <div class="main-img">
             <img src="./assets/recipe-section-one.jpg"
-              alt="Two glasses filled with rum cocktail, garnished with mint and fresh lime.">
+              alt="Two glasses filled with rum cocktail,
+              garnished with mint and fresh lime.">
           </div>
           <div class="main-search">
             <div class="main-content">
@@ -118,7 +122,8 @@
           </div>
         </div>
         <div class="footer-copyright">
-          <span>&copy; 2020 Adam Batstone & Karmen Salim<a href="https://junocollege.com/" class="juno-footer-link">
+          <span>&copy; 2020 Adam Batstone & Karmen Salim
+            <a href="https://junocollege.com/" class="juno-footer-link">
               | Created at Juno College</a>
           </span>
         </div>
@@ -129,9 +134,11 @@
 
   <!-- Scripts  -->
   <script src='https://code.jquery.com/jquery-3.5.1.min.js'
-    integrity='sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=' crossorigin='anonymous'></script>
+    integrity='sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0='
+    crossorigin='anonymous'></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
-    integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+    integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
+    crossorigin="anonymous"></script>
   <script src="scripts/app.js"></script>
   <script src="scripts/mobile-nav.js"></script>
 
