--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <!-- CSS Styles -->
   <link rel="stylesheet" href="./styles/styles.css">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
-     crossorigin="anonymous" />
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
   <!-- Google Fonts -->
   <link
     href="https://fonts.googleapis.com/css2?family=Ovo&family=Raleway:ital,wght@0,300;0,400;1,300;1,400&display=swap"
@@ -62,8 +61,7 @@
         </div>
         <div class="main-container">
           <div class="main-img">
-            <img src="./assets/recipe-section-one.jpg"
-              alt="Two glasses filled with rum cocktail,
+            <img src="./assets/recipe-section-one.jpg" alt="Two glasses filled with rum cocktail,
               garnished with mint and fresh lime.">
           </div>
           <div class="main-search">
@@ -81,8 +79,8 @@
             <div class="search-buttons-heading">
               <h4>Search By</h4>
               <div class="search-buttons">
-                <button class="name-search">Cocktail Name</button>
-                <button class="ingredient-search">Ingredient</button>
+                <button class="name-search search-mode-one">Cocktail Name</button>
+                <button class="ingredient-search search-mode-two">Ingredient</button>
               </div>
             </div>
 
@@ -134,11 +132,9 @@
 
   <!-- Scripts  -->
   <script src='https://code.jquery.com/jquery-3.5.1.min.js'
-    integrity='sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0='
-    crossorigin='anonymous'></script>
+    integrity='sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=' crossorigin='anonymous'></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
-    integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
-    crossorigin="anonymous"></script>
+    integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
   <script src="scripts/app.js"></script>
   <script src="scripts/mobile-nav.js"></script>
 
