changed one line in mina-content

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </div>
           <div class="main-search">
             <div class="main-content">
-              <p>Find the perfect cocktail based on ingredient you would like to use:</p>
+              <p>Find the perfect cocktail:</p>
               <ul class="main-content-steps">
                 <li>Select a search option before entering a query in the input field.</li>
                 <li>Get a curated list of recipes.</li>
